<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IntraMuros</string>
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="submit_connection">Connexion</string>
    <string name="error_empty_username">Veuillez saisir un nom d\'utilisateur</string>
    <string name="error_empty_email">Veuillez saisir une adresse email</string>
    <string name="placeholder_username">Tapez votre nom</string>
    <string name="placeholder_email">Tapez votre adresse email</string>
    <string name="loader_message">Chargement en cours&#8230;</string>
    <!-- Connection -->
    <string name="text_connection_welcome">Bienvenue :</string>
    <string name="text_connection_team_label">Tu fais partie des :</string>
    <string name="text_connection_mission_label">Ta mission :</string>
    <string name="text_connection_mission_content">Aider ton équipe à conquérir toutes les zones de Paris</string>
    <string name="text_connection_opponent_label">Tes adversaires :</string>
    <string name="text_connection_button_content">Jouer</string>
    <!-- Alt contents -->
    <string name="alt_icon">icône IntraMuros</string>
    <!-- Colors -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <!--  Activities Names -->
    <string name="activity_snail">Escargot</string>
    <string name="activity_map">Carte</string>
    <string name="activity_checkin">Check-in</string>
    <string name="activity_chat">Chat</string>
    <string name="activity_timeline">Timeline</string>
    <string name="activity_user_stats">Stats - User</string>
    <string name="activity_team_stats">Stats - Team</string>
    <string name="activity_settings">Paramètres</string>
    <string name="activity_flashgames">Flashgames</string>
</resources>