<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:contentDescription="@string/alt_icon"
        android:src="@drawable/im_logo" />
    
    <EditText
        android:id="@+id/field_username"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/placeholder_username" />
    
    <TextView
        android:id="@+id/error_empty_username"
        android:layout_width="300dip"
        android:layout_height="0dip"
        android:text="@string/error_empty_username" />
    
    <EditText
        android:id="@+id/field_email"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/error_empty_email"
        android:layout_width="300dip"
        android:layout_height="0dip"
        android:text="@string/error_empty_email" />
    
    <Button
        android:id="@+id/submit_connection"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:text="@string/submit_connection" />
    
</LinearLayout>