<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <TextView
        android:id="@+id/label_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_username"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/field_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/error_empty_username"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:text="@string/error_empty_username" />
    
    <TextView
        android:id="@+id/label_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_email"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/field_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/error_empty_email"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:text="@string/error_empty_email" />
    
    <Button
        android:id="@+id/submit_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_connection" />
    
</LinearLayout>