<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey"
    android:gravity="center"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/team_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:contentDescription="@string/alt_icon"
        android:src="@drawable/im_logo" />
    
    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_connection_welcome"
        android:textColor="@color/black" />

    
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="true" />
    
    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/text_connection_team_label"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/text_connection_mission_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/text_connection_mission_label"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_connection_mission_content"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/text_connection_mission_content"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center" >
        
	    <TextView
	        android:id="@+id/text_connection_opponent_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_connection_opponent_label"
	        android:textColor="@color/black" />
	    
	    <TextView
	        android:id="@+id/opponent_team"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
        	android:textColor="@color/black" />
	    
    </LinearLayout>

    <Button
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/text_connection_button_content" />

</LinearLayout>